# f1_data_fetcher

./: .gitignore  LICENSE  LOCAL_CONVEX_DOCKER_SETUP.md  README.md  WEBSITE_VISION_AND_AUTH.md  package-lock.json  package.json  pyproject.toml  start.ps1  start.sh
apps/web/: .env.local.example  Dockerfile.dev  README.md  auth.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: account-nav.tsx  admin-access-card.tsx  app-shell.tsx  auth-panel.tsx  comparison-lab.tsx  convex-provider.tsx  coverage-panel.tsx  ingestion-control-panel.tsx  module-nav.tsx  saved-views-panel.tsx  session-explorer.tsx  system-header.tsx
apps/web/convex/: catalog.ts  health.ts  ingest.ts  ingestion.ts  savedViews.ts  schema.ts  sessions.ts  tsconfig.json  users.ts  workerJobs.ts
apps/worker/: Dockerfile  README.md  backfill_fastf1_sessions.py  bootstrap_catalog.py  fastf1_service.py  ingest_control_api.py  ingest_fastf1_session.py  pyproject.toml  requirements.txt  run_worker.py  sync_fastf1_catalog.py  worker_api.py  worker_tasks.py
designs/: casual_fantasy.html  compare_lab.html  minimal_light.html  neon_dark.html  pitwall_tech.html  saved_view.html  session_explorer.html
docker/convex/: .env.example  docker-compose.yml
f1_data_fetcher/: __main__.py  fast_f1_gui.py
v2_designs/cyberpunk/: app.js  index.html  styles.css
v2_designs/minimal/: app.js  index.html  styles.css
v2_designs/pitwall/: admin_dashboard.html  app.js  comparison_lab.html  index.html  saved_views.html  session_explorer.html  styles.css  user_dashboard.html
(+33 files in other folders)
